--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css" id="theme">
+		<link rel="stylesheet" href="dist/theme/white.css" id="theme">
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
@@ -16,8 +16,61 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section data-background="security-4038176_960_720.jpg">
+					<!-- Quelle: https://cdn.pixabay.com/photo/2019/03/06/12/31/security-4038176_960_720.jpg -->
+					<h3 style="color:white;">Android</h3>
+					<h3 style="color:white;">Sicherheitsupdates</h3><br>
+					<p style="color:white;">Peter Heide</p>
+				</section>
+				<section>
+					<h3>Zitate</h3><br>
+					<p>Man muß sein Betriebssystem nicht täglich updaten.</p>
+					<p>Einmal pro Woche genügt.</p>
+					<small>(Sicherheitsexperte)</small></p>
+					<p>Der Anwender updatet nicht. Punkt.</p>
+					<small>(Chefentwickler Google Deutschland)</small>
+				</section>				
+				<section>
+					<h3>Horror-Lücke: Jedes Android-Phone kann über den Browser gehackt werden</h3>
+					<p>Beim Aufruf einer veränderten Web-Seite mit Chrome kann der Angreifer jedes gewünschte Programm installieren.</p>
+					<small><a href="https://www.stern.de/digital/smartphones/android-hack--jedes-smartphone-laesst-sich-komplett-uebernehmen-6553254.html">Stern, Malte Mansholt, 13.11.15</a></small>
+				</section>				
+				<section>
+					<h3>ANDROID SECURITY FLAW: MORE THAN 1BN PHONES COULD BE HACKED WITH SINGLE TEXT MESSAGE</h3>
+					<p>Samsung, Huawei, LG and Sony smartphones vulnerable to attack</p>
+					<small><a href="https://www.independent.co.uk/life-style/gadgets-and-tech/news/android-security-flaw-hack-samsung-huawei-phone-text-message-sms-a9093111.html">Independent, Anthony Cuthbertson,	Thursday 05 September 2019</a></small>
+				</section>				
+				<section>
+					<h3>Ebenen von Sicherheitsupdates</h3><br>
+					<ol>
+						<li>Android-Betriebssystem: Open Source<br>plus Google GApps und Samsung Software</li>
+						<li>Kernel: Ansprechen der Hardware</li>
+						<li>Firmware: Proprietär vom Gerätehersteller</li>
+					</ol>					
+					<p>Alle drei Ebenen müssen aktuell gehalten werden.</p>
+					<small><a href="https://www.kuketz-blog.de/android-aufklaerung-ueber-den-stand-der-sicherheitsupdates/">Android: Aufklärung über den Stand der Sicherheitsupdates, Mike Kuketz, 18. Juli 2019</a></small>
+				</section>
+				<section>
+					<h3>Samsung Sicherheitsupdates</h3><br>
+					<ul>
+						<li>Monatlich: A8 (2018), XCover 4s, Tab Active 3</li>
+						<li>Vierteljährlich: A40, A50</li>
+						<li>Regelmäßig (jährlich?): A3, A8+ (2018)
+					</ul><br><br>
+					<small><a href="https://security.samsungmobile.com/workScope.smsb">Samsung Security Updates: Scope (05.12.20)</a></small>
+				</section>
+				<section><br><br>
+					<h3>Samsung Sicherheitspatch-Ebene</h3><br>
+					<ul>
+						<li><a href="https://doc.samsungmobile.com/SM-A505FN/DBT/doc.html">A50 (SM-A505FN)</a></li>
+						<li><a href="https://doc.samsungmobile.com/SM-A405FN/DBT/doc.html">A40 (SM-A405FN)</a></li>
+						<li><a href="https://doc.samsungmobile.com/SM-A530F/DBT/doc.html">A8 (SM-A530F)</a></li>
+						<li><a href="https://doc.samsungmobile.com/SM-G398FN/DBT/doc.html">XCover 4s (SM-G398FN)</a></li>
+						<li><a href="https://doc.samsungmobile.com/SM-T575/DBT/doc.html">Tab Active3 (SM-T575)</a></li>						
+					</ul></p></p>
+					<p>Verbesserung von Sicherheit und Stabilität.</p>
+					<p>Provokante These: Erst updaten, dann supporten!</p>
+				</section>
 			</div>
 		</div>
 
