--- a/index.html
+++ b/index.html
@@ -24,22 +24,67 @@
 				</section>
 				<section>
 					<h3>Zitate</h3><br>
-					<p>Man muß sein Betriebssystem nicht täglich updaten.</p>
-					<p>Einmal pro Woche genügt.</p>
+					<p>Einmal pro Woche Betriebssystem updaten genügt.</p>
+					<small>(Sicherheitsexperte)</small></p>
+					<p>Das Wichtigste ist die Absicherung des Gerätes / OS.</p>
 					<small>(Sicherheitsexperte)</small></p>
 					<p>Der Anwender updatet nicht. Punkt.</p>
 					<small>(Chefentwickler Google Deutschland)</small>
 				</section>				
 				<section>
-					<h3>Horror-Lücke: Jedes Android-Phone kann über den Browser gehackt werden</h3>
-					<p>Beim Aufruf einer veränderten Web-Seite mit Chrome kann der Angreifer jedes gewünschte Programm installieren.</p>
-					<small><a href="https://www.stern.de/digital/smartphones/android-hack--jedes-smartphone-laesst-sich-komplett-uebernehmen-6553254.html">Stern, Malte Mansholt, 13.11.15</a></small>
-				</section>				
+					<h3><a href="https://owasp.org/www-project-top-ten/">Top 10 Web Application Security Risks, 12.12.20</a></h3><br>
+					<ul>
+						<li>Sensitive Data Exposure: Many web applications and APIs do not properly protect sensitive data, such as financial, <b>healthcare</b>, and PII.</li>
+						<li>Security Misconfiguration: Security misconfiguration is the most commonly seen issue. Not only must all <b>operating systems</b> 	... be securely configured, but they must be patched/upgraded in a timely fashion.</li>
+						<li>Smartphones (Former Top Ten Risk)</li>
+					</ul>				
+					<small><a href="https://owasp.org/">Open Web Application Security Project® (OWASP), 12.12.20</a></small>
+				</section>		
+				
+				<!-- Example of nested vertical slides -->
 				<section>
-					<h3>ANDROID SECURITY FLAW: MORE THAN 1BN PHONES COULD BE HACKED WITH SINGLE TEXT MESSAGE</h3>
-					<p>Samsung, Huawei, LG and Sony smartphones vulnerable to attack</p>
-					<small><a href="https://www.independent.co.uk/life-style/gadgets-and-tech/news/android-security-flaw-hack-samsung-huawei-phone-text-message-sms-a9093111.html">Independent, Anthony Cuthbertson,	Thursday 05 September 2019</a></small>
-				</section>				
+					<section>
+						<img src="hacker-5151533_960_720.jpg" width="180" height="180" alt="Hacker">
+						<!-- Quelle: https://pixabay.com/de/illustrations/hacker-hacking-diebstahl-cyber-5151533/ -->
+						<h2>Hacks</h2><br>
+						<a href="#" class="navigate-down">
+							<img class="r-frame" style="background: rgba(255,255,255,0.1);" width="178" height="238" data-src="https://static.slid.es/reveal/arrow.png" alt="Down arrow">
+						</a>
+					</section>
+					<section>
+						<h3>Horror-Lücke: Jedes Android-Phone kann über den Browser gehackt werden</h3>
+						<p>Beim Aufruf einer veränderten Web-Seite mit Chrome kann der Angreifer jedes gewünschte Programm installieren.</p>
+						<small><a href="https://www.stern.de/digital/smartphones/android-hack--jedes-smartphone-laesst-sich-komplett-uebernehmen-6553254.html">Stern, Malte Mansholt, 13.11.15</a></small>
+					</section>				
+					<section>
+						<h3>ANDROID SECURITY FLAW: MORE THAN 1BN PHONES COULD BE HACKED WITH SINGLE TEXT MESSAGE</h3>
+						<p>Samsung, Huawei, LG and Sony smartphones vulnerable to attack</p>
+						<p>Researchers at cyber security firm Check Point identified the bug in Android-based phones, revealing that it only takes a single SMS text message to gain full access to a person’s emails.</p>
+						<small><a href="https://www.independent.co.uk/life-style/gadgets-and-tech/news/android-security-flaw-hack-samsung-huawei-phone-text-message-sms-a9093111.html">Independent, Anthony Cuthbertson,	Thursday 05 September 2019</a></small>
+					</section>				
+					<section>
+						<h3>Coronavirus Cyber-Attacks:</h3>
+						<h3>Elite Hackers Target WHO</h3>
+						<p>United Nations agencies, the WHO among them, are regularly targeted by digital espionage campaigns.</p>
+						<p>Elite hackers tried to break into the World Health Organization earlier this month, sources told Reuters.</p>
+						<small><a href="https://gadgets.ndtv.com/internet/news/coronavirus-cyber-attacks-who-hack-attempts-2199570">Gadgets 360, Reuters, 12.12.20</a></small>
+					</section>				
+					<section>
+						<h3>Your smartphones are getting more valuable for hackers</h3>
+						<p>Security researchers: ... attackers would much rather hit your smartphones than your computers.</p>
+						<p>Up to 42 percent of Android users don't have the latest version, ... 846 million devices exposed to potential malware.</p>
+						<p>"The majority of victims ... get compromised by vulnerabilities that have already been disclosed they have not yet patched."</p>
+						<small><a href="https://www.cnet.com/news/your-smartphones-are-getting-more-valuable-for-hackers/">Alfred Ng, Reuters, 08.03.18</a></small>
+					</section>				
+					<section>
+						<img src="hacker-5151533_960_720.jpg" width="180" height="180" alt="Hacker"><br>
+						<!-- Quelle: https://pixabay.com/de/illustrations/hacker-hacking-diebstahl-cyber-5151533/ -->
+						<a href="#/3">
+							<img class="r-frame" style="background: rgba(255,255,255,0.1); transform: rotate(180deg);" width="178" height="238" data-src="https://static.slid.es/reveal/arrow.png" alt="Up arrow">
+						</a>
+					</section>
+				</section>
+
 				<section>
 					<h3>Ebenen von Sicherheitsupdates</h3><br>
 					<ol>
